selfhost/test/parser/functiondecl_error_bad_name.out
Error at %FILE_NAME%:1:6
Unexpected token 'int', expected 'identifier':
  |  func 123() = "abc"
          ^