selfhost/test/parser/functiondecl_error_bad_name.abra
func 123() = "abc"